# TempEdu

./: Cargo.toml  README.md  docker-compose.yml
migrations/: V1__initial.sql  V1_initial.sql
src/: main.rs
src/controller/: auth.rs  base.rs  crenaux.rs  groupes.rs  mod.rs  user.rs  weeks.rs
src/entity/: auth.rs  crenaux.rs  groupes.rs  mod.rs  role.rs  user.rs  weeks.rs
src/service/: auth.rs  crenaux.rs  groupe.rs  mod.rs  role.rs  user.rs  weeks.rs
src/utils/: configuration.rs  database.rs  mod.rs
