[package]
name = "temp_edu"
version = "0.1.0"
edition = "2021"
description = "A true edt management systeme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
refinery = {version = "0.8.4", features = ["tokio-postgres"]}
tokio-postgres = "0.7.5"

#Web
actix-web = "4"
serde = {version="1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"

#Runtime
tokio = { version = "1.17.0", features = ["full"] }