[package]
name = "temp_edu"
version = "0.1.0"
edition = "2021"
description = "A true edt management systeme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
refinery = {version = "0.8.4", features = ["tokio-postgres"]}
tokio-postgres = "0.7.5"
deadpool-postgres = {version = "0.10.2", features = ["serde"]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"

#Web
actix-web = "4"
serde = {version="1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"

#Runtime
tokio = { version = "1.17.0", features = ["full"] }