[package]
name = "temp_edu"
version = "0.1.0"
edition = "2021"
description = "A true edt management systeme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
refinery = {version = "0.8.4", features = ["tokio-postgres"]}
tokio-postgres = {version = "0.7.5", features = ["with-chrono-0_4", "with-uuid-0_8"]}
deadpool-postgres = {version = "0.10.2", features = ["serde"]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"

#Web
actix-web = "4"
serde = {version="1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"
actix-web-grants = "3.0.0-beta.6"

#Runtime
tokio = { version = "1.17.0", features = ["full"] }

#Error handling
thiserror = "1.0.30"

#Data manipulation
chrono = {version = "0.4.19", features = ["serde"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }